--- a/src/main/resources/Templates/Parent/indexParent.html
+++ b/src/main/resources/Templates/Parent/indexParent.html
@@ -5,19 +5,9 @@
     <title>Manager Parent</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
+    <link href="/static/CSS/main.css" rel="stylesheet" type="text/css">
     <script src="/static/JavaScript/function.js"></script>
-
-    <style>
-        table, th, td{
-            border: 1px solid black;
-            margin: 3px 3px 3px 3px;
-        }
-        .even-row { background-color: #f0f0f0; }
-        .odd-row { background-color: #ffffff; }
-    </style>
 </head>
-
 <body>
 <div><h1>Parent Manage</h1></div>
 <div class="container">
@@ -72,7 +62,6 @@
     </div>
 </div>
 </body>
-<script src="/resources/static/JavaScript/function.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
