--- a/src/main/resources/Templates/School/NoteBook/indexNotebook.html
+++ b/src/main/resources/Templates/School/NoteBook/indexNotebook.html
@@ -5,14 +5,8 @@
     <title>Manager NoteBook</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
+    <link href="/static/CSS/main.css" rel="stylesheet" type="text/css">
     <script src="/static/JavaScript/function.js"></script>
-    <style>
-        table, th, td{
-            border: 1px solid black;
-            margin: 3px 3px 3px 3px;
-        }
-    </style>
 </head>
 
 <body>
@@ -33,8 +27,14 @@
         <th>Feature</th>
         <tr th:each="note : ${notebookList}">
             <td th:text="${note.id}"></td>
-            <td th:utext="'Name: '+ ${note.classes.name != null ? note.classes.name : 'null'} +'<br>Class id: '+ ${note.classes.id != null ? note.classes.id : 'null'}+'<br>Class of School id: '+ ${note.classes.school.id != null ? note.classes.school.id : 'null'}"></td>
-            <td th:text="${note.school.name != null ? note.school.name : 'null'} +' ('+ ${note.school.id != null ? note.school.id : 'null'}+')'"></td>
+            <td>
+                <span th:if="${note.classes != null}" th:utext="'Name: '+ ${note.classes.name != null ? note.classes.name : 'null'} +'<br>Class id: '+ ${note.classes.id != null ? note.classes.id : 'null'}+'<br>Class of School id: '+ ${note.classes.school.id != null ? note.classes.school.id : 'null'}"></span>
+                <span th:if="${note.classes == null}">[null]</span>
+            </td>
+            <td>
+                <span th:if="${note.school != null}" th:text="${note.school.name != null ? note.school.name : 'null'} +' ('+ ${note.school.id != null ? note.school.id : 'null'}+')'"></span>
+                <span th:if="${note.school == null}">[null]</span>
+            </td>
             <td>
                 <a th:href="@{/m-note/showModifyFormNote(id=${note.id})}" class="btn btn-success">Modify</a>
                 <a th:href="@{/m-note-detail/showManageDetailNote(id=${note.id})}" class="btn btn-primary">Detail</a>
