--- a/src/main/resources/Templates/School/Subject/indexSubject.html
+++ b/src/main/resources/Templates/School/Subject/indexSubject.html
@@ -5,14 +5,8 @@
     <title>Manager Subject</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
+    <link href="/static/CSS/main.css" rel="stylesheet" type="text/css">
     <script src="/static/JavaScript/function.js"></script>
-    <style>
-        table, th, td{
-            border: 1px solid black;
-            margin: 3px 3px 3px 3px;
-        }
-    </style>
 </head>
 <body>
 <div><h1>Manage Subject</h1></div>
@@ -27,7 +21,6 @@
         <tr>
             <th>Subject Id</th>
             <th>Subject Name</th>
-            <th>School</th>
             <th>Feature</th>
         </tr>
         </thead>
@@ -35,13 +28,6 @@
         <tr th:each="subject : ${subjectList}">
             <td class="subject-id" th:text="${subject.id != null ? subject.id : 'null'}" data-id="${subject.id}"></td>
             <td th:text="${subject.nameSubject != null ? subject.nameSubject : 'null'}"></td>
-            <td>
-                <select class="school-select">
-                    <option value="">--Select School--</option>
-                    <option th:each="school : ${subject.schoolList}" th:value="${school.id}"
-                            th:text="${school.name}"></option>
-                </select>
-            </td>
             <td>
                 <a class="btn btn-success" th:href="@{/m-subject/showModifyFormSubject(id=${subject.id})}">Modify</a>
                 <!--                <a class="btn btn-success detail-link" >Detail</a>-->
@@ -77,7 +63,6 @@
     });
 </script>
 </body>
-<script src="/resources/static/JavaScript/function.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
