--- a/src/main/resources/Templates/Teacher/indexTeacher.html
+++ b/src/main/resources/Templates/Teacher/indexTeacher.html
@@ -5,16 +5,8 @@
     <title>Manager Teacher</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/static/CSS/main.css" rel="stylesheet">
+    <link href="/static/CSS/main.css" rel="stylesheet" type="text/css">
     <script src="/static/JavaScript/function.js"></script>
-    <style>
-        table, th, td{
-            border: 1px solid black;
-            margin: 3px 3px 3px 3px;
-        }
-        .even-row { background-color: #f0f0f0; }
-        .odd-row { background-color: #ffffff; }
-    </style>
 </head>
 
 <body>
