--- a/src/main/resources/Templates/User/indexUser.html
+++ b/src/main/resources/Templates/User/indexUser.html
@@ -5,15 +5,7 @@
     <title>Manager User</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/resources/static/CSS/main.css" rel="stylesheet">
-    <style>
-        table, th, td{
-            border: 1px solid black;
-            margin: 3px 3px 3px 3px;
-        }
-        .even-row { background-color: #f0f0f0; }
-        .odd-row { background-color: #ffffff; }
-    </style>
+    <link href="/resources/static/CSS/main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div><h1>Manage User</h1></div>
