--- a/src/main/resources/Templates/User/indexUser.html
+++ b/src/main/resources/Templates/User/indexUser.html
@@ -20,6 +20,7 @@
                 <span th:text="${success}" class="alert alert-success"></span>
             </div>
         </div>
+        <div th:insert="~{Fragment/searchElementForm :: searchElementForm}"></div>
         <table>
             <thead>
                 <th>User Id</th>
