--- a/src/main/resources/Templates/login.html
+++ b/src/main/resources/Templates/login.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<!--    <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">-->
     <link href="/CSS/main.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="/JavaScript/function.js"></script>
     <script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
     <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.css" rel="stylesheet" type="text/css">
+
     <style>
         body {
           min-height: 100vh;
@@ -48,6 +51,9 @@
             <div th:if="${param.error}">
                 <span>Login Failed,<br/> please check your username or password !!!</span>
             </div>
+            <div th:if="${error}">
+                <span th:text="${error}"></span>
+            </div>
         </div>
         <!-- User name -->
         <div class="form-outline mb-4">
@@ -82,9 +88,11 @@
 
         <!-- Register buttons -->
         <div class="text-center">
-            <p>Not a member? <a href="#" th:href="@{/register/showRegisterForm}">Register</a></p>
+            <p>Not a member? <a th:href="@{/m-user/showFormAddUser}">Register</a></p>
         </div>
     </form>
 </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </html>
